# ttcdata

./: .gitignore  Cargo.toml  latest_eu.csv  latest_na.csv
.github/workflows/: daily_rust_commit.yml
2025/11/30/: eu_1764502503.csv  na_1764502318.csv
2025/12/01/: eu.csv.zst  eu_1764588889.csv  na.csv.zst  na_1764588702.csv
2025/12/02/: eu.csv  eu.csv.zst  lookup.csv  lookup.csv.zst  na.csv.zst
2025/12/03/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/04/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/05/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/06/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/07/: eu.csv  eu.csv.zst  lookup.csv.zst  na.csv  na.csv.zst
2025/12/08/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/09/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/10/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/11/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/12/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/13/: eu.csv  eu.csv.zst  lookup.csv  na.csv  na.csv.zst
2025/12/14/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/15/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/16/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/17/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/18/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/19/: eu.csv  eu.csv.zst  lookup.csv  lookup.csv.zst  na.csv  na.csv.zst
2025/12/20/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/21/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
2025/12/22/: eu.csv  eu.csv.zst  na.csv  na.csv.zst
latest/: eu.csv  lookup.csv  na.csv
src/: main.rs
(+777 files in other folders)
