[package]
name = "ttc_market_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
csv = "1.4.0"
num-format = "0.4.4"
regex = "1.12.2"
reqwest = { version="0.12.24", features=["blocking"] }
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.145"
zip = "6.0.0"
